fix(popup-menu): increase z-index
Related to https://github.com/camunda/camunda-modeler/issues/3349

--- a/assets/diagram-js.css
+++ b/assets/diagram-js.css
@@ -521,7 +521,7 @@ marker.djs-dragger tspan {
   height: 100vh;
   top: 0;
   left: 0;
-  z-index: 200;
+  z-index: 2000;
   line-height: 1;
   font-family: "IBM Plex Sans", sans-serif;
   border: solid 1px var(--popup-border-color);
